package org.example.elevatorSystem.entities;

public enum Direction {
    UP, DOWN, IDLE
}
